// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery should render component with 3 images 1`] = `
<div
  className="str-chat__gallery "
>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
</div>
`;

exports[`Gallery should render component with 4 images 1`] = `
<div
  className="str-chat__gallery str-chat__gallery--square"
>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-placeholder"
    onClick={[Function]}
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  >
    <p>
      {{ imageCount }} more
    </p>
  </div>
</div>
`;

exports[`Gallery should render component with 6 images 1`] = `
<div
  className="str-chat__gallery str-chat__gallery--square"
>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-placeholder"
    onClick={[Function]}
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  >
    <p>
      {{ imageCount }} more
    </p>
  </div>
</div>
`;

exports[`Gallery should render component with default props 1`] = `
<div
  className="str-chat__gallery "
>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
  <div
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img />
  </div>
</div>
`;
